Align fixed

--- a/src/style/less/main.less
+++ b/src/style/less/main.less
@@ -34,6 +34,7 @@ img {
 h1, h2, h3, h4 {
 	color: #EAEAEA;
 	font-family: Oswald;
+	text-align: left;
 }
 
 #header h1 small {
